--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                       </li>
                     </ul>
                     <form class="d-flex">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
+                      <input class="form-control me-2" id="input-buscar-filme" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" id="btn-buscar-filme" type="submit">Search</button>
                     </form>
                   </div>
                 </div>
@@ -70,4 +70,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
   </body>
+  <script src="./js/classes.js"></script>
+  <script src="./js/script.js"></script>
 </html>
